[gd_scene load_steps=5 format=3 uid="uid://w127h3nmmyr7"]

[ext_resource type="Script" path="res://Ash/ash_interview.gd" id="1_1pfix"]
[ext_resource type="Texture2D" uid="uid://f0ufcmrqnuea" path="res://Backgrounds/Snowy_Background_-_Plain.png" id="1_kybg5"]
[ext_resource type="Texture2D" uid="uid://bma2pet0xrcvg" path="res://Characters/MCNeutral.png" id="2_5vonn"]
[ext_resource type="Texture2D" uid="uid://d04m1m6rcgvd" path="res://Ash/Ash.png" id="4_pn5n6"]

[node name="Ash Interview" type="Node2D"]
scale = Vector2(1.8, 1.8)
script = ExtResource("1_1pfix")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2360.0
offset_bottom = 1640.0
texture = ExtResource("1_kybg5")

[node name="McNeutral" type="Sprite2D" parent="TextureRect"]
position = Vector2(248, 312)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_5vonn")

[node name="Ash" type="Sprite2D" parent="TextureRect"]
position = Vector2(904, 352)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_pn5n6")

[node name="TextBox" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = -4.44444
offset_top = 568.889
offset_right = 1147.56
offset_bottom = 752.889
color = Color(0.964706, 0.698039, 0.807843, 1)

[node name="Dialogue" type="Label" parent="TextureRect/TextBox"]
layout_mode = 0
offset_left = 24.0
offset_top = 48.0
offset_right = 1112.0
offset_bottom = 168.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Placeholder Text"
autowrap_mode = 3

[node name="NameBox" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_top = 533.333
offset_right = 232.0
offset_bottom = 589.333
color = Color(1, 0.517647, 0.372549, 1)

[node name="Speaker\'s Name" type="Label" parent="TextureRect/NameBox"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Place Holder:"
horizontal_alignment = 1

[node name="ClickScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -8.0
offset_right = 1156.0
offset_bottom = 796.0

[connection signal="gui_input" from="ClickScreen" to="." method="_on_click_screen_gui_input"]
